<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BulletZoneII</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_join_game">Join Game!</string>
    <string name="title_activity_play_game">Play Game</string>
    <string name="text_view_tank_id">Tank ID = </string>
    <string name="text_view_grid"></string>
    <string name="button_fire">Fire!</string>
    <string name="button_quit">Quit</string>
    <string name="welcome_text_view">Welcome to BulletZoneII</string>
    <string name="wall">&#9632;</string>

    <!--Button String Values-->
    <string name="button_move_left">&#8656;</string>
    <string name="button_move_right">&#8658;</string>
    <string name="button_move_forward">&#8657;</string>
    <string name="button_move_backward">&#8659;
    </string>
</resources>
